
syntax = "proto3";

package buildrepo;

import "google/api/annotations.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "examples/sub/message.proto";
import "examples/sub2/message.proto";
import "google/protobuf/timestamp.proto";
*/
message CreateBuildRequest {
 string Repository = 1;
 string CommitID = 2;
 string Branch = 3;
 uint64 BuildID = 4;
 string CommitMSG = 5;
}

message CreateBuildResponse {
 string BuildStoreid=1;
}

message PingRequest {}
message PingResponse {}

service BuildRepoManager {
 rpc createBuild(CreateBuildRequest) returns (CreateBuildResponse);
 rpc Ping(PingRequest) returns (PingResponse);


}